--- a/entry.html
+++ b/entry.html
@@ -73,7 +73,7 @@
 
     <header style="text-align:center; padding: 60px 20px;">
         <h1 style="font-family:'Orbitron'; font-size: 3.5rem; margin:0; letter-spacing: 5px;">ADMISSION</h1>
-        <p style="font-weight:900; color:#666; margin-top: 10px;">加入申し込み（他校・地域からも受付中）</p>
+        <p style="font-weight:900; color:#666; margin-top: 10px;">加入申し込み</p>
     </header>
 
     <main class="form-wrapper">
