--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <title>活動実績 | 篠ノ井技術クラブ</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Noto+Sans+JP:wght@900&display=swap" rel="stylesheet">
+    <script src="menu.js" defer></script>
     <style>
         /* 画像保存・ドラッグ禁止 */
         img {
@@ -14,7 +15,7 @@
             user-select: none;
         }
 
-        /* 拡大（ライトボックス） */
+        /* 拡大表示（ライトボックス） */
         #lightbox {
             display: none;
             position: fixed;
@@ -32,29 +33,7 @@
             pointer-events: none;
         }
 
-        /* 統一ナビゲーション */
-        .global-nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 40px;
-            background: #fff;
-            border-bottom: 2px solid #000;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-        .nav-brand { font-family: 'Orbitron'; font-weight: 900; font-size: 1.5rem; letter-spacing: 2px; }
-        .nav-links { display: flex; gap: 20px; align-items: center; }
-        .nav-links a { text-decoration: none; color: #000; font-weight: 900; font-size: 0.85rem; }
-        .login-btn {
-            background: #00aeef;
-            color: #fff !important;
-            padding: 8px 25px !important;
-            border-radius: 50px;
-        }
-
-        /* カテゴリ表示 */
+        /* カテゴリ表示用（押せないタグ） */
         .category-display {
             display: flex;
             justify-content: center;
@@ -72,7 +51,7 @@
             color: #333;
         }
 
-        /* カードレイアウト */
+        /* ポートフォリオカードのデザイン */
         .portfolio-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -101,29 +80,15 @@
         .spec-unit { background: #f8f9fa; padding: 10px; border-radius: 8px; text-align: center; }
 
         @media (max-width: 600px) {
-            .global-nav { padding: 15px 20px; }
-            .nav-brand { font-size: 1.2rem; }
-            .nav-links { gap: 12px; }
-            .nav-links a:not(.login-btn) { font-size: 0.75rem; }
-            .login-btn { padding: 6px 15px !important; font-size: 0.7rem; }
             header h1 { font-size: 2.5rem !important; }
+            .portfolio-grid { grid-template-columns: 1fr; }
         }
     </style>
 </head>
 <body oncontextmenu="return false;">
     <div id="loading"><h1>PORTFOLIO LOADING...</h1></div>
     
-    <nav class="global-nav">
-        <div class="nav-brand">SHINONOI</div>
-        <div class="nav-links">
-            <a href="index.html">HOME</a>
-            <a href="news.html">NEWS</a>
-            <a href="guide.html">GUIDE</a>
-            <a href="entry.html" style="color:#00aeef;">JOIN US</a>
-            <a href="about.html">ABOUT</a>
-            <a href="login.html" class="login-btn">LOGIN</a>
-        </div>
-    </nav>
+    <div id="nav-placeholder"></div>
 
     <div id="lightbox" onclick="this.style.display='none'">
         <img id="lightbox-img" src="" alt="">
@@ -156,11 +121,12 @@
         </article>
     </main>
 
-    <footer style="text-align:center; padding: 100px 20px 40px; color:#999; font-weight:900;">
+    <footer style="text-align:center; padding: 80px 20px 100px; color:#999; font-weight:900;">
         © 2026 篠ノ井技術クラブ
     </footer>
 
     <script>
+        // 画像拡大機能
         function openLightbox(src) {
             if(!src || src.includes('COMING SOON')) return;
             const lightbox = document.getElementById('lightbox');
@@ -169,6 +135,7 @@
             lightbox.style.display = 'flex';
         }
 
+        // ローディング解除処理
         window.addEventListener('load', () => {
             const loader = document.getElementById('loading');
             if(loader) {
@@ -177,6 +144,7 @@
             }
         });
 
+        // 右クリック禁止やショートカット禁止の基本セキュリティ
         window.addEventListener('keydown', (e) => {
             if ((e.ctrlKey || e.metaKey) && (e.key === 's' || e.key === 'p')) {
                 e.preventDefault();
