--- a/portfolio.html
+++ b/portfolio.html
@@ -6,148 +6,37 @@
     <title>活動実績 | 篠ノ井技術クラブ</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Noto+Sans+JP:wght@900&display=swap" rel="stylesheet">
-    <script src="menu.js" defer></script>
-    <style>
-        /* 画像保存・ドラッグ禁止 */
-        img {
-            -webkit-touch-callout: none;
-            -webkit-user-drag: none;
-            user-select: none;
-        }
-
-        /* 拡大表示（ライトボックス） */
-        #lightbox {
-            display: none;
-            position: fixed;
-            z-index: 30000;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background: rgba(0, 0, 0, 0.9);
-            justify-content: center;
-            align-items: center;
-            cursor: zoom-out;
-        }
-        #lightbox img {
-            max-width: 90%;
-            max-height: 90%;
-            pointer-events: none;
-        }
-
-        /* カテゴリ表示用（押せないタグ） */
-        .category-display {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-            margin: 40px 0;
-            flex-wrap: wrap;
-        }
-        .display-item {
-            background: #fff;
-            padding: 8px 20px;
-            border-radius: 5px;
-            font-size: 0.9rem;
-            font-weight: 900;
-            border: 1px solid #ddd;
-            color: #333;
-        }
-
-        /* ポートフォリオカードのデザイン */
-        .portfolio-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 30px;
-            max-width: 1100px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .p-card {
-            background: #fff;
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-            border: 1px solid #eee;
-        }
-        .p-image {
-            width: 100%;
-            height: 250px;
-            object-fit: cover;
-            cursor: zoom-in;
-            border-bottom: 4px solid #00aeef;
-            background: #f0f0f0;
-        }
-        .p-content { padding: 25px; text-align: left; }
-        .p-specs { display: grid; grid-template-columns: repeat(3, 1fr); gap: 8px; }
-        .spec-unit { background: #f8f9fa; padding: 10px; border-radius: 8px; text-align: center; }
-
-        @media (max-width: 600px) {
-            header h1 { font-size: 2.5rem !important; }
-            .portfolio-grid { grid-template-columns: 1fr; }
-        }
-    </style>
+    <script src="special-menu.js" defer></script>
 </head>
 <body oncontextmenu="return false;">
     <div id="loading"><h1>PORTFOLIO LOADING...</h1></div>
     
     <div id="nav-placeholder"></div>
 
-    <div id="lightbox" onclick="this.style.display='none'">
-        <img id="lightbox-img" src="" alt="">
-    </div>
-
     <header style="text-align:center; padding: 60px 20px;">
         <h1 style="font-family:'Orbitron'; font-size: 3.5rem; margin:0; letter-spacing: 5px;">PORTFOLIO</h1>
         <p style="font-weight:900; color:#666; margin-top: 10px;">僕たちの挑戦と、技術の記録</p>
     </header>
 
-    <div class="category-display">
-        <div class="display-item">Race</div>
-        <div class="display-item">Build</div>
-        <div class="display-item">System</div>
-    </div>
-
-    <main class="portfolio-grid">
-        <article class="p-card" style="opacity: 0.7;">
-            <div class="p-image" style="display:flex; align-items:center; justify-content:center; color:#ccc; font-family:'Orbitron'; font-weight:900;">COMING SOON</div>
-            <div class="p-content">
-                <span style="background:#666; color:#fff; padding:3px 10px; border-radius:50px; font-size:0.7rem;">PREPARATION</span>
-                <h2 style="font-size:1.5rem; margin:10px 0; color:#333;">2026年度 活動開始予定</h2>
-                <p style="font-size:0.9rem; color:#486581; margin-bottom:20px;">4月の新学期より、エコカー製作のプロセスや大会への挑戦をここに記録していきます。</p>
-                <div class="p-specs">
-                    <div class="spec-unit"><span style="font-size:0.6rem; color:#999;">STATUS</span><br><b>準備中</b></div>
-                    <div class="spec-unit"><span style="font-size:0.6rem; color:#999;">TARGET</span><br><b>全国大会</b></div>
-                    <div class="spec-unit"><span style="font-size:0.6rem; color:#999;">START</span><br><b>2026.04</b></div>
-                </div>
+    <main class="portfolio-grid" style="padding-bottom: 120px;"> <article class="p-card" style="opacity: 0.7;">
+            <div class="p-image" style="height:250px; background:#f0f0f0; display:flex; align-items:center; justify-content:center; font-family:'Orbitron'; font-weight:900;">COMING SOON</div>
+            <div class="p-content" style="padding:25px;">
+                <h2 style="font-size:1.5rem; margin-bottom:10px;">2026年度 プロジェクト始動</h2>
+                <p style="font-size:0.9rem; color:#666;">新学期より、エコラン大会出場に向けた車体製作プロセスを公開予定。</p>
             </div>
         </article>
     </main>
 
-    <footer style="text-align:center; padding: 80px 20px 100px; color:#999; font-weight:900;">
+    <footer style="text-align:center; padding: 40px 20px 150px; color:#999; font-weight:900;">
         © 2026 篠ノ井技術クラブ
     </footer>
 
     <script>
-        // 画像拡大機能
-        function openLightbox(src) {
-            if(!src || src.includes('COMING SOON')) return;
-            const lightbox = document.getElementById('lightbox');
-            const img = document.getElementById('lightbox-img');
-            img.src = src;
-            lightbox.style.display = 'flex';
-        }
-
-        // ローディング解除処理
         window.addEventListener('load', () => {
             const loader = document.getElementById('loading');
             if(loader) {
                 loader.style.opacity = '0';
                 setTimeout(() => { loader.style.display = 'none'; }, 500);
-            }
-        });
-
-        // 右クリック禁止やショートカット禁止の基本セキュリティ
-        window.addEventListener('keydown', (e) => {
-            if ((e.ctrlKey || e.metaKey) && (e.key === 's' || e.key === 'p')) {
-                e.preventDefault();
             }
         });
     </script>
