--- a/downloads.html
+++ b/downloads.html
@@ -136,7 +136,7 @@
 
             <div style="margin-top: 50px; padding: 20px; background: #f1f5f9; border-radius: 4px; border: 1px dashed #cbd5e1;">
                 <p style="margin:0; font-size: 0.85rem; font-weight: 900; color: #64748b; line-height: 1.6;">
-                    ※資料の閲覧にはPDFリーダーが必要です。技術的な質問や、データの不備がある場合は技術担当部員まで連絡してください。
+                    ※資料の閲覧にはPDFリーダーが必要です。技術的な質問や、データの不備がある場合は技術担当まで連絡してください。
                 </p>
             </div>
         </section>
