--- a/downloads.html
+++ b/downloads.html
@@ -30,120 +30,100 @@
         .dl-card {
             background: #fff;
             color: #000;
-            border-top: 10px solid #000;
+            border-top: 10px solid #00aeef;
             padding: 40px;
             border-radius: 4px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.1);
         }
 
-        .dl-list {
-            margin-top: 30px;
-        }
+        .dl-list { margin-top: 30px; }
 
         .dl-item {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 20px;
+            padding: 25px;
             border-bottom: 1px solid #eee;
             transition: 0.2s;
         }
-        .dl-item:hover {
-            background: #f8f9fa;
-        }
+        .dl-item:hover { background: #f8f9fa; }
 
-        .dl-info {
-            display: flex;
-            flex-direction: column;
-        }
-        .dl-name {
-            font-weight: 900;
-            font-size: 1.1rem;
-            color: #000;
-        }
-        .dl-meta {
-            font-size: 0.75rem;
-            color: #888;
-            font-family: 'Orbitron';
-            margin-top: 5px;
-        }
+        .dl-info { display: flex; flex-direction: column; }
+        .dl-name { font-weight: 900; font-size: 1.2rem; color: #000; }
+        .dl-desc { font-size: 0.85rem; color: #666; margin-top: 5px; }
+        .dl-meta { font-size: 0.7rem; color: #aaa; font-family: 'Orbitron'; margin-top: 5px; }
 
         .dl-button {
             background: #000;
             color: #fff;
-            padding: 10px 20px;
+            padding: 12px 25px;
             text-decoration: none;
             font-family: 'Orbitron';
             font-size: 0.8rem;
             font-weight: 900;
             border-radius: 4px;
             transition: 0.3s;
+            border: none;
+            cursor: pointer;
         }
-        .dl-button:hover {
-            background: #00aeef;
-        }
+        .dl-button:hover { background: #00aeef; }
 
         @media (max-width: 600px) {
             .dl-item { flex-direction: column; align-items: flex-start; gap: 15px; }
             .dl-button { width: 100%; text-align: center; }
-            .dl-card { padding: 25px; }
         }
     </style>
 </head>
 <body oncontextmenu="return false;">
 
-    <div id="loading"><h1>SYSTEM LOADING...</h1></div>
+    <div id="loading"><h1>DATA ACCESSING...</h1></div>
     <div id="nav-container"></div>
 
     <main class="dl-main">
         <section class="dl-card">
             <h1 style="font-family: 'Orbitron', sans-serif; letter-spacing: 5px; margin-bottom: 10px; font-size: 2.5rem; font-weight: 900;">DOWNLOAD</h1>
-            <p style="font-weight: 900; color: #888; font-size: 0.9rem; margin-bottom: 40px;">DOCUMENT & RESOURCES</p>
+            <p style="font-weight: 900; color: #888; font-size: 0.9rem; margin-bottom: 40px;">DOCUMENTS & ASSETS</p>
             
             <div class="dl-list">
                 <div class="dl-item">
                     <div class="dl-info">
                         <span class="dl-name">2026年度 入部申込書</span>
-                        <span class="dl-meta">PDF / 156KB</span>
+                        <span class="dl-desc">自署名・保護者承諾・健康状況確認を含む正式版</span>
+                        <span class="dl-meta">FILE TYPE: PDF / SIZE: A4</span>
                     </div>
-                    <a href="docs/entry_form_2026.pdf" class="dl-button" download>DOWNLOAD</a>
+                    <a href="docs/2026_entry_form.pdf" class="dl-button" download>DOWNLOAD</a>
                 </div>
 
                 <div class="dl-item">
                     <div class="dl-info">
-                        <span class="dl-name">クラブ紹介パンフレット（もてぎ大会実績含む）</span>
-                        <span class="dl-meta">PDF / 2.4MB</span>
+                        <span class="dl-name">篠ノ井技術クラブ 活動規約</span>
+                        <span class="dl-desc">兼部禁止ルールや安全基準についての詳細資料</span>
+                        <span class="dl-meta">FILE TYPE: PDF</span>
                     </div>
-                    <a href="docs/club_pamphlet.pdf" class="dl-button" download>DOWNLOAD</a>
+                    <a href="docs/club_rules.pdf" class="dl-button" download>DOWNLOAD</a>
                 </div>
 
                 <div class="dl-item">
                     <div class="dl-info">
-                        <span class="dl-name">篠ノ井技術クラブ 活動規約・安全基準</span>
-                        <span class="dl-meta">PDF / 88KB</span>
+                        <span class="dl-name">もてぎ大会 走行データシート</span>
+                        <span class="dl-desc">498.000km/Lを達成した際のセッティングログ</span>
+                        <span class="dl-meta">FILE TYPE: PDF</span>
                     </div>
-                    <a href="docs/rules_safety.pdf" class="dl-button" download>DOWNLOAD</a>
-                </div>
-
-                <div class="dl-item">
-                    <div class="dl-info">
-                        <span class="dl-name">チームロゴ・アセットデータ</span>
-                        <span class="dl-meta">ZIP (PNG/SVG) / 1.2MB</span>
-                    </div>
-                    <a href="docs/team_logo_pack.zip" class="dl-button" download>DOWNLOAD</a>
+                    <a href="docs/motegi_data_2025.pdf" class="dl-button" download>DOWNLOAD</a>
                 </div>
             </div>
 
-            <div style="margin-top: 50px; padding: 20px; background: #f1f5f9; border-radius: 4px; border: 1px dashed #cbd5e1;">
-                <p style="margin:0; font-size: 0.85rem; font-weight: 900; color: #64748b; line-height: 1.6;">
-                    ※資料の閲覧にはPDFリーダーが必要です。技術的な質問や、データの不備がある場合は技術担当まで連絡してください。
+            <div style="margin-top: 50px; padding: 25px; background: #f1f5f9; border-radius: 4px; border: 2px dashed #cbd5e1;">
+                <h3 style="margin:0 0 10px 0; font-family:'Orbitron'; font-size:0.9rem;">NOTICE</h3>
+                <p style="margin:0; font-size: 0.8rem; font-weight: 900; color: #64748b; line-height: 1.6;">
+                    資料の閲覧にはPDFリーダーが必要です。ダウンロードした申込書はA4サイズで印刷し、必要事項を記入・自署の上、金工室の顧問まで提出してください。
                 </p>
             </div>
         </section>
     </main>
 
     <footer style="text-align:center; padding: 40px; color:#888; font-size:0.7rem; font-family:'Orbitron';">
-        © 2026 SHINONOI TECHNICAL CLUB / DATABASE
+        © 2026 SHINONOI TECHNICAL CLUB / RESOURCE CENTER
     </footer>
 
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
