--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                 <table class="spec-table" style="width: 100%; border-collapse: collapse; font-weight: 900; margin-bottom: 30px;">
                     <tr style="border-bottom: 1px solid #eee;"><th style="text-align: left; padding: 20px; background: #f8f9fa; width: 30%;">対象</th><td style="padding: 20px;">ものづくりに興味がある中学生</td></tr>
                     <tr style="border-bottom: 1px solid #eee;"><th style="text-align: left; padding: 20px; background: #f8f9fa;">必要なもの</th><td style="padding: 20px;">やる気と、汚れてもいい服</td></tr>
-                    <tr style="border-bottom: 1px solid #eee;"><th style="text-align: left; padding: 20px; background: #f8f9fa;">活動場所</th><td style="padding: 20px;">篠ノ井西中学校 金工室</td></tr>
+                    <tr style="border-bottom: 1px solid #eee;"><th style="text-align: left; padding: 20px; background: #f8f9fa;">活動場所</th><td style="padding: 20px;">未定</td></tr>
                 </table>
 
                 <div id="map-area" style="width: 100%; border-radius: 12px; overflow: hidden; border: 2px solid #000; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
