--- a/portfolio.html
+++ b/portfolio.html
@@ -1,44 +1,10 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>活動実績 | 篠ノ井技術クラブ</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Noto+Sans+JP:wght@900&display=swap" rel="stylesheet">
-    <script src="special-menu.js" defer></script>
+    <meta http-equiv="refresh" content="0;URL='/blog/index.html'">
+    <title>Redirecting...</title>
+    <script>window.location.href = "/blog/index.html";</script>
 </head>
-<body oncontextmenu="return false;">
-    <div id="loading"><h1>PORTFOLIO LOADING...</h1></div>
-    
-    <div id="nav-placeholder"></div>
-
-    <header style="text-align:center; padding: 60px 20px;">
-        <h1 style="font-family:'Orbitron'; font-size: 3.5rem; margin:0; letter-spacing: 5px;">PORTFOLIO</h1>
-        <p style="font-weight:900; color:#666; margin-top: 10px;">僕たちの挑戦と、技術の記録</p>
-    </header>
-
-    <main class="portfolio-grid" style="padding-bottom: 120px;"> <article class="p-card" style="opacity: 0.7;">
-            <div class="p-image" style="height:250px; background:#f0f0f0; display:flex; align-items:center; justify-content:center; font-family:'Orbitron'; font-weight:900;">COMING SOON</div>
-            <div class="p-content" style="padding:25px;">
-                <h2 style="font-size:1.5rem; margin-bottom:10px;">2026年度 プロジェクト始動</h2>
-                <p style="font-size:0.9rem; color:#666;">新学期より、エコラン大会出場に向けた車体製作プロセスを公開予定。</p>
-            </div>
-        </article>
-    </main>
-
-    <footer style="text-align:center; padding: 40px 20px 150px; color:#999; font-weight:900;">
-        © 2026 篠ノ井技術クラブ
-    </footer>
-
-    <script>
-        window.addEventListener('load', () => {
-            const loader = document.getElementById('loading');
-            if(loader) {
-                loader.style.opacity = '0';
-                setTimeout(() => { loader.style.display = 'none'; }, 500);
-            }
-        });
-    </script>
-</body>
+<body style="background:#0b1d2e;"></body>
 </html>
